--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="title"
+      content="Luxury Catering: Catering Service Provider in Bangladesh"
+    />
+    <meta
+      title="Luxury Catering: Catering Service Provider in Bangladesh"
+      name="description"
+      content="For the first time in Bangladesh, Luxury Catering presents to you a complete modern Catering solution consisting of Your Events: A complete catering solution."
+    />
     <title>Luxury Catering</title>
   </head>
   <body>
