varification meta added

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
       name="description"
       content="For the first time in Bangladesh, Luxury Catering presents to you a complete modern Catering solution consisting of Your Events: A complete catering solution."
     />
+    <meta
+      name="google-site-verification"
+      content="oE3TsBcNKJe57ibFjyByV1awMaAsGYUtZW9__GC96h4"
+    />
     <title>Luxury Catering</title>
   </head>
   <body>
